--- a/HeadLines/manifest.json
+++ b/HeadLines/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
 
-  "name": "NewsBin",
+  "name": "HeadLines",
   "description": "Gets the latest News From Google",
   "version": "1.0",
 
